# krasintegra-test

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.yml  pyproject.toml
.github/workflows/: deploy.yml  main.yml
frontend/: .env.production  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: ChartPage.tsx  LoginPage.tsx  UsersPage.tsx
migrations/: env.py
migrations/versions/: 3ff5f64daef7_add_created_by_field_to_user.py  43414ef5e0b0_init.py  afe215d50d79_add_on_delete_cascade_to_token_user_.py
src/testovoe/api/: __init__.py
src/testovoe/api/auth/: __init__.py  response.py  router.py
src/testovoe/api/exception/: auth.py  default.py  password.py  response.py  user_not_found.py  validation.py
src/testovoe/api/user/: __init__.py  response.py  router.py
src/testovoe/db/: __init__.py  base.py  token.py  user.py
src/testovoe/exception/: __init__.py  invalid_token.py  not_enough_rights_exception.py  token_expired.py  token_not_provided.py  user_not_found.py  username_or_password_incorrect.py
src/testovoe/main/: config.py  create_root_user.py  main.py  routers.py
src/testovoe/main/dependencies/: __init__.py  auth.py  config.py  session.py
src/testovoe/model/: __init__.py  user.py
src/testovoe/service/: __init__.py  auth.py  file.py  user.py
