[project]
name = "testovoe"
version = "0.1.0"
description = ""
authors = [
    {name = "Ivan Karmanov",email = "ivan@karmanow.ru"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "psycopg (>=3.2.10,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (>=3.2,<4.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "psycopg-binary (>=3.2.10,<4.0.0)"
]

[tool.poetry]
packages = [{include = "testovoe", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
